# dream-team-azure-agents

./: MIGRATION_COMPLETE.md  README.md  README_SIMPLIFIED.md  azure.yaml
backend/: pyproject.toml
backend_new/: README.md  agent_framework_helper.py  main.py  pyproject.toml  schemas.py
frontend/: package-lock.json  package.json
frontend_streamlit/: README.md  app.py  pyproject.toml  streamlit_app.py
infra_pulumi/: Pulumi.yaml  README.md  __main__.py  pyproject.toml
