[project]
name = "infra"
version = "0.1.0"
description = "Pulumi infrastructure for dream team project"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "pulumi>=3.0.0",
    "pulumi-azure-native>=2.0.0",
    "pulumi-azuread>=5.0.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"